--- a/client/tsconfig.node.json
+++ b/client/tsconfig.node.json
@@ -8,7 +8,8 @@
     "allowSyntheticDefaultImports": true,
     "strict": true,
     "resolveJsonModule": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "composite": true
   },
   "include": ["vite.config.ts"]
 }
