feat: Add issue and pull request templates for better contribution guidelines
feat: Create CI workflow for automated testing and security audits

chore: Update .gitignore and .npmignore to exclude sensitive and unnecessary files

docs: Add CHANGELOG.md to document project changes and version history

docs: Create CLAUDE.md for project overview and guidance for Claude AI integration

docs: Add CODE_OF_CONDUCT.md to establish community standards

docs: Create CONTRIBUTING.md to outline contribution guidelines and processes

docs: Add LICENSE file to specify project licensing under MIT

docs: Update README.md with project features, configuration, and support information

docs: Create SECURITY.md to outline security policies and best practices

chore: Update package.json with author, repository, and homepage information

--- a/.gitignore
+++ b/.gitignore
@@ -14,8 +14,10 @@ build/
 .env.local
 .env.*.local
 
-# Configuration (contains sensitive data)
+# Configuration and data (contains sensitive data)
 config/config.json
+data/
+*.key
 
 # IDE
 .vscode/
