--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,11 +8,10 @@ on:
 
 jobs:
   build:
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
 
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
         node-version: [20.x, 22.x]
 
     steps:
@@ -39,6 +38,16 @@ jobs:
         run: npm test --if-present
         continue-on-error: true
 
+      - name: Upload build artifacts
+        if: matrix.node-version == '22.x'
+        uses: actions/upload-artifact@v4
+        with:
+          name: build-artifacts
+          path: |
+            server/dist/
+            client/dist/
+          retention-days: 7
+
   security:
     runs-on: ubuntu-latest
 
@@ -62,3 +71,56 @@ jobs:
       - name: Check for vulnerable dependencies
         run: npx audit-ci --moderate
         continue-on-error: true
+
+  release:
+    name: Create Release
+    runs-on: ubuntu-latest
+    needs: [build, security]
+    if: startsWith(github.ref, 'refs/tags/v')
+    permissions:
+      contents: write
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '22.x'
+          cache: 'npm'
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Build project
+        run: npm run build
+
+      - name: Create release archive
+        run: |
+          mkdir -p release
+          cp -r server/dist release/server
+          cp -r client/dist release/client
+          cp package.json package-lock.json README.md release/
+          cd release
+          tar -czf ../mysql-mcp-webui-${{ github.ref_name }}.tar.gz .
+          cd ..
+          zip -r mysql-mcp-webui-${{ github.ref_name }}.zip release/
+
+      - name: Extract release notes
+        id: extract_notes
+        run: |
+          VERSION="${{ github.ref_name }}"
+          echo "Creating release for $VERSION"
+
+      - name: Create GitHub Release
+        uses: softprops/action-gh-release@v1
+        with:
+          files: |
+            mysql-mcp-webui-${{ github.ref_name }}.tar.gz
+            mysql-mcp-webui-${{ github.ref_name }}.zip
+          generate_release_notes: true
+          draft: false
+          prerelease: ${{ contains(github.ref_name, 'alpha') || contains(github.ref_name, 'beta') || contains(github.ref_name, 'rc') }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
