fix: Correct release archive paths (client builds to server/public)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -102,7 +102,7 @@ jobs:
         run: |
           mkdir -p release
           cp -r server/dist release/server
-          cp -r client/dist release/client
+          cp -r server/public release/public
           cp package.json package-lock.json README.md release/
           cd release
           tar -czf ../mysql-mcp-webui-${{ github.ref_name }}.tar.gz .
