feat(auth): implement JWT and API key authentication methods
- Added JWT authentication support with cookie handling.
- Enhanced auth middleware to support both JWT and API key authentication.
- Created new auth routes for login, logout, and user info retrieval.
- Implemented user password change functionality.
- Added token validation endpoint for API keys.

feat(users): add user management routes and functionality

- Implemented user creation, retrieval, updating, and deletion endpoints.
- Added password reset functionality for users.
- Ensured user data is handled securely without exposing password hashes.

refactor(database): enhance user management in database

- Created user table with necessary fields and relationships.
- Implemented functions for user management in the database manager.
- Added logic to ensure a default admin user is created if none exist.

chore(dependencies): update and add necessary packages

- Added bcrypt, cookie-parser, and jsonwebtoken as dependencies.
- Updated devDependencies with type definitions for new packages.

fix(logging): improve request logging to include user information

- Updated logging middleware to log user ID along with API key ID.
- Enhanced request logging to capture relevant user actions.

style: clean up code and improve type definitions

- Extended Express Request interface to include user and API key information.
- Improved code readability and organization across various files.

--- a/.env.example
+++ b/.env.example
@@ -52,11 +52,31 @@ RATE_LIMIT_MAX_REQUESTS=100
 NODE_ENV=production
 
 # =============================================================================
-# AUTHENTICATION (Required for stdio mode)
+# AUTHENTICATION
 # =============================================================================
-# Authentication token for stdio mode
-# Generate a secure token and add it to your Claude Desktop config
-# You can generate one with: node -e "console.log(require('crypto').randomBytes(32).toString('hex'))"
+# Two authentication systems:
+# 1. JWT (for WebUI users) - username/password login
+# 2. API Keys (for MCP tools and programmatic access)
+
+# --- JWT Authentication (WebUI only) ---
+# JWT Secret for signing tokens (minimum 32 characters)
+# Generate: openssl rand -base64 32
+# Used for username/password authentication in the WebUI
+# Optional in development HTTP mode (auto-generates default with warning)
+# REQUIRED in production HTTP mode
+# NOT used in stdio mode (MCP uses API keys instead)
+JWT_SECRET=
+
+# JWT token expiration time (default: 7d)
+# Examples: 1h, 24h, 7d, 30d
+JWT_EXPIRES_IN=30d
+
+# --- API Key Authentication (MCP stdio mode only) ---
+# API key for MCP authentication when running in stdio mode
+# Only required if TRANSPORT=stdio (for Claude Desktop integration)
+# Generate: node -e "console.log(require('crypto').randomBytes(32).toString('hex'))"
+# Add this to your Claude Desktop config's mcpServers section
+# Not used in HTTP mode (HTTP mode uses JWT for WebUI, API keys managed in WebUI)
 AUTH_TOKEN=
 
 # =============================================================================
@@ -66,7 +86,11 @@ AUTH_TOKEN=
 SSL_CERT_DIR=./certs
 
 # =============================================================================
-# DEVELOPMENT OPTIONS
+# NOTES
 # =============================================================================
-# Skip authentication for localhost (development only)
-# REQUIRE_AUTH_ON_LOCALHOST=false
+# Default WebUI Credentials (first login):
+#   Username: admin
+#   Password: admin
+#   You will be forced to change the password on first login for security
+#
+# Authentication always required (no localhost bypass for security)
