--- a/package.json
+++ b/package.json
@@ -40,13 +40,19 @@
   "homepage": "https://github.com/yashagldit/mysql-mcp-webui#readme",
   "license": "MIT",
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
     "@types/better-sqlite3": "^7.6.13",
+    "@types/cookie-parser": "^1.4.10",
+    "@types/jsonwebtoken": "^9.0.10",
     "concurrently": "^8.2.2"
   },
   "engines": {
     "node": ">=20.0.0"
   },
   "dependencies": {
-    "better-sqlite3": "^12.4.1"
+    "bcrypt": "^6.0.0",
+    "better-sqlite3": "^12.4.1",
+    "cookie-parser": "^1.4.7",
+    "jsonwebtoken": "^9.0.2"
   }
 }
