--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
     container_name: mysql-mcp-webui
     ports:
       - "5197:5197"
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     environment:
       # Transport mode
       - TRANSPORT=http
