Update HTTP port from 3000 to 9274 across the application
- Changed the default HTTP port in deployment, installation, and configuration documentation.
- Updated Dockerfiles to expose and use port 9274.
- Modified health check endpoints and API calls to reflect the new port.
- Adjusted firewall rules and reverse proxy configurations accordingly.
- Updated client-side configurations to proxy requests to the new port.
- Enhanced error messages to guide users to the new Web UI URL.
- Incremented version number to 0.0.5 and added new dependencies in package.json.
- Implemented caching for environment configuration to optimize JWT secret generation.

--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "mysql-mcp-webui",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "MySQL MCP server with React-based web UI for live configuration management",
   "workspaces": [
     "server",
     "client"
   ],
+  "type": "module",
   "bin": {
     "mysql-mcp-webui": "server/dist/index.js"
   },
@@ -62,9 +63,16 @@
     "node": ">=20.0.0"
   },
   "dependencies": {
+    "@modelcontextprotocol/sdk": "^1.21.0",
     "bcrypt": "^6.0.0",
     "better-sqlite3": "^12.4.1",
     "cookie-parser": "^1.4.7",
-    "jsonwebtoken": "^9.0.2"
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^5.0.1",
+    "jsonwebtoken": "^9.0.2",
+    "mysql2": "^3.11.5",
+    "node-sql-parser": "^5.3.4",
+    "zod": "^3.23.8"
   }
 }
