fix: add workflow_dispatch and created event to npm-publish workflow

--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -2,7 +2,8 @@ name: Publish to npm
 
 on:
   release:
-    types: [published]
+    types: [published, created]
+  workflow_dispatch:
 
 jobs:
   publish:
