chore: automate npm publishing in release workflow
- Integrate npm publish into CI release job for automatic publishing
- Update npm-publish workflow for manual-only triggers
- Adds npm provenance and registry-url to release job
- Eliminates need for separate workflow triggering

--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -1,9 +1,12 @@
-name: Publish to npm
+name: Publish to npm (Manual)
 
 on:
-  release:
-    types: [published, created]
   workflow_dispatch:
+    inputs:
+      reason:
+        description: 'Reason for manual publish'
+        required: false
+        default: 'Manual re-publish'
 
 jobs:
   publish:
@@ -13,6 +16,11 @@ jobs:
       id-token: write # Required for npm provenance
 
     steps:
+      - name: Log manual publish reason
+        run: |
+          echo "Manual publish triggered"
+          echo "Reason: ${{ github.event.inputs.reason }}"
+
       - name: Checkout code
         uses: actions/checkout@v4
 
