--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,12 +75,13 @@ jobs:
         continue-on-error: true
 
   release:
-    name: Create Release
+    name: Create Release and Publish to npm
     runs-on: ubuntu-latest
     needs: [build, security]
     if: startsWith(github.ref, 'refs/tags/v')
     permissions:
       contents: write
+      id-token: write # Required for npm provenance
 
     steps:
       - name: Checkout code
@@ -90,6 +91,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '22.x'
+          registry-url: 'https://registry.npmjs.org'
           cache: 'npm'
 
       - name: Install dependencies
@@ -126,3 +128,14 @@ jobs:
           prerelease: ${{ contains(github.ref_name, 'alpha') || contains(github.ref_name, 'beta') || contains(github.ref_name, 'rc') }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Verify package contents
+        run: |
+          echo "Verifying build artifacts..."
+          ls -la server/dist/
+          ls -la server/public/ || echo "Warning: server/public not found"
+
+      - name: Publish to npm
+        run: npm publish --provenance --access public
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
