--- a/server/package.json
+++ b/server/package.json
@@ -19,12 +19,13 @@
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.21.0",
+    "@toon-format/toon": "^1.0.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^5.0.1",
     "mysql2": "^3.11.5",
     "node-sql-parser": "^5.3.4",
-    "zod": "^3.23.8",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.7"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
